--- a/manifest.json
+++ b/manifest.json
@@ -5,9 +5,9 @@
     "author": "haw-lp",
     "manifest_version": 3,
     "icons": { 
-        "16": "icons/48.png",
-        "48": "icons/48.png",
-        "128": "icons/48.png" 
+        "16": "48.png",
+        "48": "48.png",
+        "128": "48.png" 
     },
     "permissions": [
         "tabs",
